<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartCashier</string>
    <string name="menu_cashier">Cashier</string>
    <string name="menu_addProduct">Add product</string>
    <string name="menu_searchProduct">Search prodcut</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_printer_setting">Printer Setting</string>
    <string name="menu_logout">Sign out</string>
    <string name="item">Items</string>
    <string name="scanBtn">Sacn barcode</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="item_header_barcode">Item ID</string>
    <string name="item_header_name">Name</string>
    <string name="item_header_qty">Quantity</string>
    <string name="set_quantity_dialog_editText_hint">Type quantity</string>
    <string name="set_quantity_dialog_title">Quantity</string>
    <string name="set_quantity_dialog_submitBtn">Submit</string>
    <string name="no_bluetooth_found">No bluetooth adapter available</string>
    <string name="enable_bluetooth_adapter">Please enable bluetooth adapter</string>
    <string name="bluetooth_dialog_title">Select bluetooth printer device</string>
    <string name="bluetooth_dialog_device">  bluetooth device</string>
    <string name="bluetooth_dialog_warning">Please connect bluetooth device before select.</string>
    <string name="bluetooth_toast_connected">Printer connected</string>
</resources>
